@@ -1831,17 +1831,6 @@
       </component>
     </version>
   </module>
-  <module name="libplanner">
-    <version release="gnome-2.6">
-      <component name="libplanner" dir="planner" group="office">
-	<podir dir="po-libplanner"/>
-	<potname name="planner.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="libmimedir">
     <version release="gnome-2.6">
       <component name="libmimedir" dir="libmimedir" group="extras">
