@@ -1,4 +1,9 @@
-2003-12-03  Christian9 Neumair  <chris@gnome-de.org>
+2003-12-04  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Removed libplanner. It has been merged with
+	planner.
+
+2003-12-03  Christian Neumair  <chris@gnome-de.org>
 
 	* translation-status.xml: Replaced (lib)mrproject by (lib)planner.
 
